# cache

./: .gitignore  CMakeLists.txt  LFU.cpp  Makefile  PCA.cpp  README.md  cach  main.cpp
inc/: cache.hpp  head.hpp
src/: 1  cache.cpp  cache.hpp  input.cpp
tests/: test_generate.py  tests.cpp  tests.txt
